force-app/main/default/objects/Loan__c/fields/Sanction_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Sub_Status__c</fullName>
    <label>Sanction Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank not Confirmed</fullName>
            </value>
            <value>
                <fullName>Customer Not Providing Documents</fullName>
            </value>
            <value>
                <fullName>Declined / Cibil Issue/ Eligibility Issue</fullName>
            </value>
            <value>
                <fullName>Lead to Assign</fullName>
            </value>
            <value>
                <fullName>Logged In</fullName>
            </value>
            <value>
                <fullName>Out Station</fullName>
            </value>
            <value>
                <fullName>Pre Login- Document Collating</fullName>
            </value>
            <value>
                <fullName>Sanctioned</fullName>
            </value>
            <value>
                <fullName>Sanctioned -Letter Awaited</fullName>
            </value>
            <value>
                <fullName>Sanctioned -Letter Received</fullName>
            </value>
            <value>
                <fullName>SENP Case- ITR Issue</fullName>
            </value>
            <value>
                <fullName>In RCU</fullName>
            </value>
            <value>
                <fullName>In Credit</fullName>
            </value>
            <value>
                <fullName>Verification / PD</fullName>
            </value>
            <value>
                <fullName>Query Documents Pending</fullName>
            </value>
            <value>
                <fullName>Final Stage</fullName>
            </value>
            <value>
                <fullName>Rejected from 2 banks</fullName>
            </value>
            <value>
                <fullName>Rejected from 3 banks</fullName>
            </value>
            <value>
                <fullName>Job loss/Financial Issue/Medical Issue/Personal Issue</fullName>
            </value>
            <value>
                <fullName>location/costing/posession Date</fullName>
            </value>
            <value>
                <fullName>Upgarde-Downgrade</fullName>
            </value>
            <value>
                <fullName>Defaulter/PTN/FTN Sent</fullName>
            </value>
            <value>
                <fullName>Email Sent / Call connected with SM/CRM</fullName>
            </value>
            <value>
                <fullName>SOP / Loan Closure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>