force-app/main/default/objects/Loan__c/fields/Targets_Sanction__c.field-meta.xml
<CustomField>
    <fullName>Targets_Sanction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Targets(Sanction)</label>
    <referenceTo>Target__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>