force-app/main/default/objects/Loan__c/fields/TL_Email__c.field-meta.xml
<CustomField>
    <fullName>TL_Email__c</fullName>
    <defaultValue>$Label.Home_Loan_TL_Email</defaultValue>
    <label>TL Email</label>
    <type>Email</type>
</CustomField>