force-app/main/default/objects/Loan__c/fields/Total_Disbursed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Disbursed_Amount__c</fullName>
    <label>Total Disbursed Amount</label>
    <summarizedField>Loan_Disbursement_Details__c.Disbursement_Amount__c</summarizedField>
    <summaryForeignKey>Loan_Disbursement_Details__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>