force-app/main/default/objects/Loan__c/fields/Tower_Type__c.field-meta.xml
<CustomField>
    <fullName>Tower_Type__c</fullName>
    <formula>IF(ISPICKVAL(RW_Unit_No__r.TowerName__r.Property_Type__c, &apos;Residential&apos;), &apos;Residential&apos;, IF(ISPICKVAL(RW_Unit_No__r.TowerName__r.Property_Type__c, &apos;Commercial&apos;), &apos;Commercial&apos;, null) )</formula>
    <label>Tower Type</label>
    <type>Text</type>
</CustomField>