force-app/main/default/objects/Loan__c/recordTypes/DefaultLoan.recordType-meta.xml
<RecordType>
    <fullName>DefaultLoan</fullName>
    <active>true</active>
    <label>DefaultLoan</label>
</RecordType>