force-app/main/default/objects/Loan__c/recordTypes/NewLoan.recordType-meta.xml
<RecordType>
    <fullName>NewLoan</fullName>
    <active>true</active>
    <label>NewLoan</label>
</RecordType>