force-app/main/default/objects/Loan__c/validationRules/Account_Number_Numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Number_Numeric</fullName>
    <active>false</active>
    <errorConditionFormula>AND( RW_Loan_Account_Number__c != null ,NOT( ISNUMBER( RW_Loan_Account_Number__c ) ))</errorConditionFormula>
    <errorMessage>Loan Account should be Numeric</errorMessage>
</ValidationRule>