force-app/main/default/objects/Loan__c/validationRules/Bank_Name_and_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Name_and_Number</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Sanction_Sub_Status__c, &apos;Logged In&apos;),
				OR(
				    ISBLANK(RW_Banker_Name__c),
					 		ISBLANK(RW_Banker_Number__c) 
				)
)</errorConditionFormula>
    <errorMessage>Please add Banker Name &amp; Banker Number</errorMessage>
</ValidationRule>