force-app/main/default/objects/Loan__c/validationRules/Bank_Preference_1_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Preference_1_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(RW_Bank_Preference_1__c , &apos;&apos;)</errorConditionFormula>
    <errorMessage>Please select Bank Preference 1</errorMessage>
</ValidationRule>