force-app/main/default/objects/Loan__c/validationRules/Home_Loan_Taken_From_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Home_Loan_Taken_From_is_required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  RW_Loan_Account_Number__c != null,
  ISPICKVAL(Home_Loan_Taken_From__c, &apos;&apos;) 
)</errorConditionFormula>
    <errorMessage>Please fill the Home Loan Taken From field.</errorMessage>
</ValidationRule>