force-app/main/default/objects/Loan__c/validationRules/Loan_Disbursement_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Loan_Disbursement_Required_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(RW_Loan_Record_Status__c, &quot;First Disbursement Received&quot;),
    OR(
        ISBLANK(RW_First_Disbursement_Date__c),
        ISBLANK(RW_First_Disbursement_Amount__c),
        ISBLANK(TEXT(RW_First_Disbursement_Status__c)),
        ISBLANK(TEXT(First_Disbursement_sub_status__c)),
        ISBLANK(TEXT(RW_First_Disbursement_Received__c)),
        ISBLANK(First_Disbursement_Remarks__c)
    )
)</errorConditionFormula>
    <errorMessage>From the First Disbursement Details Section: Please fill in all First Disbursement details (Date, Amount, Status, Sub-Status, Received, Remarks) before updating the status.</errorMessage>
</ValidationRule>