force-app/main/default/objects/Loan__c/validationRules/Loan_sacntion_check_point.validationRule-meta.xml
<ValidationRule>
    <fullName>Loan_sacntion_check_point</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	OR(
		ischanged(RW_Sanction_Status__c),
		ischanged(RW_Sanction_Amount__c),
		ischanged(RW_Sanction_Date__c),
		ischanged(RW_Loan_Account_Number__c)
	),
	OR(
		And(
			ISPICKVAL(RW_Sanction_Status__c , &quot;Loan Sanctioned&quot;),
			OR(
				ISBLANK(RW_Sanction_Date__c),
				ISBLANK(RW_Loan_Account_Number__c),
				ISBLANK(RW_Sanction_Amount__c)
			)
		),
		AND(
			NOT(ISPICKVAL(RW_Sanction_Status__c , &quot;Loan Sanctioned&quot;)),
			OR(
				NOT(ISBLANK(RW_Sanction_Date__c)),
				NOT(ISBLANK(RW_Loan_Account_Number__c)),
				NOT(ISBLANK(RW_Sanction_Amount__c))
			)
		)
	)
)</errorConditionFormula>
    <errorMessage>Either of Sanction Date, Sanction Status, Loan Account Number OR Sanction Amount is blank.</errorMessage>
</ValidationRule>