force-app/main/default/objects/Loan__c/validationRules/Logged_In_date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Logged_In_date_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(RW_Sanction_Status__c, &apos;Logged In- Sanction in Process&apos;), 
		  ISBLANK(Logged_In_Date__c) 	
)</errorConditionFormula>
    <errorMessage>Please enter Logged In Date</errorMessage>
</ValidationRule>