force-app/main/default/objects/Loan__c/validationRules/NOC_Generated_Date_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>NOC_Generated_Date_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(RW_Loan_Record_Status__c, &apos;NOC Generated&apos;),
  ISBLANK(RW_NOC_Generated_Date__c)
	)</errorConditionFormula>
    <errorMessage>Please enter NOC generated date</errorMessage>
</ValidationRule>