force-app/main/default/objects/Loan__c/validationRules/NOC_Handover_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>NOC_Handover_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(RW_First_Disbursement_Status__c, &apos;Docket Submitted to Bank&apos;),
				ISBLANK(NOC_Handover_Date__c)  

)</errorConditionFormula>
    <errorMessage>Please enter NOC Handover Date</errorMessage>
</ValidationRule>