force-app/main/default/objects/Loan__c/validationRules/Require_Sanction_Details_When_Loan_Sanct.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Sanction_Details_When_Loan_Sanct</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( RW_Loan_Record_Status__c, &quot;Loan Sanctioned&quot;),
    OR(
        ISBLANK(RW_Sanction_Amount__c),
        ISBLANK(RW_Sanction_Date__c),
        ISBLANK(TEXT(RW_Sanction_Status__c))
    )
)</errorConditionFormula>
    <errorMessage>From the Sanction Details Section: Please fill in Sanction Amount, Sanction Date, and Sanction Status before marking the loan as Sanctioned.</errorMessage>
</ValidationRule>