force-app/main/default/objects/Loan__c/validationRules/Sanction_date_not_less_than_Booking_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Sanction_date_not_less_than_Booking_date</fullName>
    <active>false</active>
    <errorConditionFormula>RW_Sanction_Date__c  &lt;  DATEVALUE(RW_Booking__r.Booking_Date__c )</errorConditionFormula>
    <errorMessage>Sanction Date should not be less than the Booking Date</errorMessage>
</ValidationRule>