force-app/main/default/objects/Loan__c/validationRules/Sanction_Letter_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Sanction_Letter_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( RW_Sanction_Status__c , &quot;Loan Sanctioned&quot;),  RW_Sanction_Letter_ID__c == null)</errorConditionFormula>
    <errorMessage>Please Upload the Sanction Letter First before making a Loan Sanctioned!</errorMessage>
</ValidationRule>