force-app/main/default/objects/Loan__c/validationRules/TPA_Upload_required_if_TPA_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>TPA_Upload_required_if_TPA_Case</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( RW_TPA_Case__c, &quot;TPA Case&quot;),
ISBLANK( RW_TPA_Letter_Id__c))</errorConditionFormula>
    <errorMessage>Please upload the TPA Letter as required!</errorMessage>
</ValidationRule>