force-app/main/default/objects/Loan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RW_Loan_Record_Status__c</columns>
    <columns>Loan_Record_Sub_Status__c</columns>
    <columns>Project_Name__c</columns>
    <columns>RW_Sanction_Status__c</columns>
    <columns>RW_Bank_Name__c</columns>
    <columns>RW_First_Disbursement_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>