force-app/main/default/objects/Loan__c/listViews/R_Galleria_2_and_Edge_2.listView-meta.xml
<ListView>
    <fullName>R_Galleria_2_and_Edge_2</fullName>
    <columns>NAME</columns>
    <columns>RW_Loan_Record_Status__c</columns>
    <columns>RW_Project_Name__c</columns>
    <columns>RW_Bank_Name__c</columns>
    <columns>RW_Bank_Preference_1__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>HL_RM_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RW_Project_Name__c</field>
        <operation>equals</operation>
        <value>R Galleria 2 and Edge 2</value>
    </filters>
    <label>R Galleria 2 and Edge 2</label>
</ListView>