force-app/main/default/objects/Loan__c/listViews/Runwal_Commerz.listView-meta.xml
<ListView>
    <fullName>Runwal_Commerz</fullName>
    <columns>NAME</columns>
    <columns>RW_Loan_Record_Status__c</columns>
    <columns>RW_Project_Name__c</columns>
    <columns>RW_Bank_Name__c</columns>
    <columns>RW_Bank_Preference_1__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>HL_RM_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RW_Project_Name__c</field>
        <operation>equals</operation>
        <value>Runwal Commerz</value>
    </filters>
    <label>Runwal Commerz</label>
</ListView>